--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "book-list-app",
+  "name": "weather-app-with-react",
   "version": "1.0.0",
   "main": "index.js",
   "repository": "git@github.com:lipho/book-list-app.git",
